# CanModule

./: .gitignore  .gitlab-ci-docker-generation.yml  .gitlab-ci.yml  .pre-commit-config.yaml  .pydevproject  .travis.yml  CHANGELOG.md  CMakeLists.gtest.cmake  CMakeLists.gtest.txt  CMakeLists.pybind11.txt  CMakeLists.standalone.txt  CMakeLists.txt  CMakeLists.txt.org  Doxyfile  LICENSE  README.md  appveyor.yml  boost_appveyor.cmake  boost_custom_cc7.cmake  boost_custom_win_VS2017.cmake  boost_standard_install_cc7.cmake  boost_travis.cmake  build_standalone_cc7.sh  gitlab-ci.yml  triggerProject.sh  xxx.txt
.github/workflows/: gitlab-bridge.yaml  gitlab-bridge.yml
CWrapper/include/: canmodule_wrapper.h
CWrapper/src/: canmodule_wrapper.cpp
CanInterface/: CMakeLists.txt
CanInterface/include/: CCCUtils.h  CCanAccess.h  CanBusAccess.h  CanLibExternCWrapper.h  CanMessage.h  CanModuleUtils.h  CanStatistics.h  ExportDefinition.h  MessageSharedQueue.h  VERSION.h  gettimeofday.h
CanInterface/src/: CCCUtils.cpp  CCanAccess.cpp  CanBusAccess.cpp  CanLibExternCWrapper.cpp  CanMessage.cpp  CanModuleUtils.cpp  CanStatistics.cpp  MessageSharedQueue.cpp  gettimeofday.cpp  xxxCanBusAccess.cpp
CanInterfaceImplementations/: CMakeLists.txt
CanInterfaceImplementations/anagate/: AnaCanScan.cpp  AnaCanScan.h  AnaCanScan2.cpp  AnaGateErrors.h  AnaGateErrors2.h  CMakeLists.txt  CMakeLists.txt.org  CMakeLists.txt.xxx
CanInterfaceImplementations/anagate2/: AnaCanScan2.cpp  AnaCanScan2.h  CMakeLists.txt
CanInterfaceImplementations/pkcan/: CMakeLists.txt  pkcan.cpp  pkcan.h
CanInterfaceImplementations/sockcan/: CMakeLists.txt  ExecCommand.cpp  ExecCommand.h  SockCanScan.cpp  SockCanScan.h  UdevAnalyserForPeak.cpp  UdevAnalyserForPeak.h
CanInterfaceImplementations/systec/: CMakeLists.txt  STCanScan.cpp  STCanScan.h
CanInterfaceImplementations/unitTestMockUpImplementation/: CMakeLists.txt  CMakeLists.txt.org  MockCanAccess.cpp  MockCanAccess.h  mockUp.cpp  mockUp.h
CanLibLoader/: CMakeLists.txt
CanLibLoader/include/: CanLibLoader.h  CanLibLoaderLin.h  CanLibLoaderWin.h
CanLibLoader/src/: CanLibLoader.cpp  CanLibLoaderLin.cpp  CanLibLoaderWin.cpp
CanModuleTest/: CMakeLists.txt
CanModuleTest/include/: CanModuleTest.h
CanModuleTest/src/: CanModuleTest.cpp  main.cpp
Diagnostic/include/: Diag.h
Diagnostic/src/: Diag.cpp
Documentation/: BuildingCanModuleWithLogIt.md  clean_doc.sh  documentation.sh  doxygen.sh  make_doc.sh  notes.txt  prune_doc.sh  sphinx.sh
Documentation/doxygen-html/: AnaCanScan_8cpp.html  AnaCanScan_8cpp.js  AnaCanScan_8cpp__incl.dot  AnaCanScan_8cpp__incl.map  AnaCanScan_8cpp__incl.md5  AnaCanScan_8cpp_ad5698349874e3653b879b5de27311594_cgraph.dot  AnaCanScan_8cpp_ad5698349874e3653b879b5de27311594_cgraph.map  AnaCanScan_8cpp_ad5698349874e3653b879b5de27311594_cgraph.md5  AnaCanScan_8cpp_source.html  AnaCanScan_8h.html  AnaCanScan_8h.js  AnaCanScan_8h__dep__incl.dot  AnaCanScan_8h__dep__incl.map  AnaCanScan_8h__dep__incl.md5  AnaCanScan_8h__incl.dot  AnaCanScan_8h__incl.map  AnaCanScan_8h__incl.md5  AnaCanScan_8h_source.html  AnaGateErrors_8h.html  AnaGateErrors_8h.js  AnaGateErrors_8h__dep__incl.dot  AnaGateErrors_8h__dep__incl.map  AnaGateErrors_8h__dep__incl.md5  AnaGateErrors_8h_source.html  CCanAccess_8cpp.html  CCanAccess_8cpp__incl.dot  CCanAccess_8cpp__incl.map  CCanAccess_8cpp__incl.md5  CCanAccess_8cpp_source.html  CCanAccess_8h.html  CCanAccess_8h.js  CCanAccess_8h__dep__incl.dot  CCanAccess_8h__dep__incl.map  CCanAccess_8h__dep__incl.md5  CCanAccess_8h__incl.dot  CCanAccess_8h__incl.map  CCanAccess_8h__incl.md5  CCanAccess_8h_source.html  CanBusAccess_8cpp.html  CanBusAccess_8cpp__incl.dot  (+874 more)
Documentation/html/: .buildinfo  building.html  canports.html  classesdetails.html  classestracing.html  downloading.html  doxygen.html  errors.html  genindex.html  index.html  logging.html  objective.html  objects.inv  quickstart.html  reconnection.html  running.html  search.html  searchindex.js  standardApi.html  standardApiList.html  support.html
Documentation/latex/: CanModule.fdb_latexmk  CanModule.fls  CanModule.tex
Documentation/project/: .~lock.CanModule2.0.22.odt#  .~lock.What Piotr did to the CanModule in 2022 _.pdf#  CanModule2.0.22.odt
Documentation/qthelp/: .buildinfo  CanModule.qhcp  CanModule.qhp  building.html  canports.html  classesdetails.html  classestracing.html  downloading.html  doxygen.html  errors.html  genindex.html  index.html  logging.html  objective.html  reconnection.html  running.html  standardApi.html  standardApiList.html  support.html
Documentation/sphinx-result/: .buildinfo  building.html  connection.html  cwrapper.html  downloading.html  examples.html  genindex.html  index.html  logging.html  objective.html  objects.inv  quickstart.html  reconnection.html  running.html  search.html  searchindex.js  standardApi.html  support.html
Documentation/sphinx-source/: building.rst  canports.rst  classesdetails.rst  classestracing.rst  conf.py  conf.py.old  connection.rst  downloading.rst  errors.rst  frameratelimitation.rst  index.rst  logging.rst  multitasking.rst  multithreading.rst  objective.rst  quickstart.rst  reconnection.rst  running.rst  standardApi.rst  standardApiList.rst  support.rst  x1.txt
GoogleTest/: CMakeLists.txt
ci/: run-clang-analysis-linux.sh  sync-gitlab-bridge.py
ci/gitlab/: docker.yml  docs.yml  normal.yml
cmake/: anagate.cmake  env.cmake  gtest.cmake  libsocketcan.cmake  logit.cmake  pybind11.cmake  systec.cmake  version.cmake
docs/: CANMODULE-UTILS.md  DEVELOPMENT.md  Doxyfile  QUICKSTART.md  README.md
python/: canmodule-utils.py
python/canmodule/: CanDeviceError.pyi  CanFlags.pyi  __init__.pyi  can_flags.pyi
python/canmodule_utils/: __init__.py  actions.py  cli.py  config.py  frames.py
src/include/: CanDerivedStats.h  CanDevice.h  CanDeviceArguments.h  CanDeviceConfig.h  CanDeviceConfiguration.h  CanDiagnostic.h  CanDiagnostics.h  CanExtra.h  CanFrame.h  CanFrame.hpp  CanLogIt.h  CanStat.h  CanStats.h  CanVendorAnagate.h  CanVendorDummy.h  CanVendorLoopback.h  CanVendorSocketCan.h  (+3 more)
(+924 files in other folders)
