IF (WIN32)
	SET( CAN_LIBRARY_LOADER_PLATFORM_IMPL src/CanLibLoaderWin.cpp)
ELSE()
	SET( CAN_LIBRARY_LOADER_PLATFORM_IMPL src/CanLibLoaderLin.cpp)
ENDIF()

MESSAGE (STATUS "Building with CAN_LIBRARY_LOADER_PLATFORM_IMPL file [${CAN_LIBRARY_LOADER_PLATFORM_IMPL}]")

add_library (CanLibLoader OBJECT
        src/CanLibLoader.cpp
		${CAN_LIBRARY_LOADER_PLATFORM_IMPL}
	)